--- a/Views/Shared/_Login.cshtml
+++ b/Views/Shared/_Login.cshtml
@@ -4,8 +4,8 @@
     <title>@ViewBag.Title</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"
-    <link rel="shortcut icon" href="/img/principal/header.png" type="image/png" />
-    <link rel="apple-touch-icon" href="/img/principal/header.png" />
+    <link rel="shortcut icon" href="../img/principal/header.png" type="image/png" />
+    <link rel="apple-touch-icon" href="../img/principal/header.png" />
     @Styles.Render("~/Scripts/vendor/bootstrap/css/bootstrap.min.css")
     @Styles.Render("~/fonts/font-awesome-4.7.0/css/font-awesome.min.css")
     @Styles.Render("~/Scripts/vendor/animate/animate.css")
