--- a/Views/Login/SGA.cshtml
+++ b/Views/Login/SGA.cshtml
@@ -57,7 +57,7 @@
                     <span class="txt1">
                         ¿Olvidaste la
                     </span>
-                    <a class="txt2" href="#">
+                    <a class="txt2" href="@Url.Content("~/Login/Olvido")">
                         contraseña?
                     </a>
                 </div>
